# prototype

./: C-Run  CMakeLists.txt
app/: CMakeLists.txt  comparaison.py
modules/module3/: CMakeLists.txt  main.cpp
modules/module3/header/: my_sfml_class.h
modules/module3/src/: my_sfml_class.cpp
modules/projet1/: CMakeLists.txt  main.cpp
modules/projet1/bindings/: bindings.cpp
modules/projet1/header/: my_class.h
modules/projet1/src/: my_class.cpp
modules/projet2/: CMakeLists.txt
modules/projet2/python/: my_class.py
